# yew-wasm

./: .gitignore  Cargo.toml  README.md  db_back.sql  index.html  index.scss
src/: dropdown.rs  error.rs  main.rs  route.rs  table.rs
src/back/: mod.rs  purchase.rs
src/components/: message.rs  mod.rs  modal.rs  style.scss  table.rs
src/components/autofill/: autofill.rs  autofill.scss  mod.rs
src/components/form/: form.rs  formitem.rs  mod.rs
src/components/input/: input.rs  input.scss
src/components/pagination/: pagination.rs
src/ownhttp/: mod.rs  myhttp.rs
src/pages/: case.rs  drug.rs  guest.rs  mod.rs  setting.rs  style.scss
src/pages/case/: case.rs  mod.rs  style.scss
src/pages/drug/: drug.rs  mod.rs  model.rs  style.scss
src/pages/drug_in/: drug_in.rs  mod.rs  style.scss
src/pages/home/: index.rs  mod.rs
src/pages/login/: login.rs
src/pages/people/: index.rs  mod.rs  people.scss  style.scss  table.rs
src/pages/purchase/: mod.rs  models.rs  purchase.rs  style.scss
src/pages/sale/: mod.rs  model.rs  sale.rs  style.scss
src/pages/setting/: mod.rs  setting.rs  style.scss  yew-wasm.code-workspace
