[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.4"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.10.0"
pulldown-cmark = "0.6.1"
reqwest = { version = "0.11.7", features = ["json"] }
serde = "1"
gloo-utils = "0.1.6"
thiserror = "1"
yew = "0.19.3"
js-sys = "0.3.60"
stylist = { version = "0.10.0", features=["yew","yew_use_style"] }
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
validator = { version = "0.16.0", features = ["derive"] }
validator_derive = "0.16.0"
syn = "1.0.105"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Node",
    "Window",
    "HtmlCollection",
    "HtmlInputElement",
    "FormData",
    "FocusEvent", "Event", "EventTarget", "SubmitEvent",
    "HtmlFormElement",
]